dataset1235/2025-2/610742602/users/1184653884/executions/906907063_3221148872.log
== RUN (2025-08-19 20:56:24)
-- CODE: 
print("Jocasta e Sosígenes tem juntas:" 40+35)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
-- ERROR:
File "XXXX", line 1
    print("Jocasta e Sosígenes tem juntas:" 40+35)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
-- ERROR:
File "XXXX", line 1
    print("Jocasta e Sosígenes tem juntas:" 40+35)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:00:37)
-- CODE: 
j=35
s=40
soma=j+s
print("Jocasta e Sosígenes tem juntas:", soma)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
Jocasta e Sosígenes tem juntas: 75
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
---- user output:
Jocasta e Sosígenes tem juntas: 75
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 20:55:34)
-- CODE: 
int a, b
a = 35
b= 40
print("Jocasta e Sosígenes tem juntas:", a+b)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
-- ERROR:
File "XXXX", line 1
    int a, b
        ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
-- ERROR:
File "XXXX", line 1
    int a, b
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
